--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
     }
   @keyframes float{0%{transform:translateY(0)}50%{transform:translateY(-14px)}100%{transform:translateY(0)}}
     .hero-left h1{animation:float 5s ease-in-out infinite;font-weight:900;letter-spacing:-2px;}
-  </style>
+    .stretch{display:inline-block;animation:stretch 6s var(--ease) infinite;transform-origin:left center;}
+  @keyframes stretch{0%{letter-spacing:-2px;transform:scaleX(1);}40%{letter-spacing:-6px;transform:scaleX(1.3);}70%{letter-spacing:-2px;transform:scaleX(1);}100%{letter-spacing:-2px;transform:scaleX(1);}}
+</style>
 </head>
 <body>
 
@@ -97,7 +99,7 @@
   <section class="hero">
     <div class="hero-left">
       <div class="eyebrow">FRONTEND DESIGNER</div>
-      <h1 class="reveal">-ALOMGIR HOSSEN</h1>
+      <h1 class="reveal stretch">-ALOMGIR HOSSEN</h1>
       <h2 class="reveal">Crafting Pixel-Perfect Coding Experiences.</h2>
       <p class="lead reveal">Hi, I'm Alomgir. I specialize in React.js, Next.js and creating seamless, responsive web solutions that blend code with creativity. I build animated interfaces and delightful micro-interactions.</p>
       <div class="hero-cta reveal">
