--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     /* --- Header --- */
     header{position:fixed;left:0;right:0;top:0;display:flex;align-items:center;justify-content:space-between;padding:22px 48px;z-index:60;backdrop-filter:blur(6px);}
-    .logo{animation:float 6s ease-in-out infinite; font-weight:800;letter-spacing:1px}
+    .logo{animation:floatRev 6s ease-in-out infinite; font-weight:800;letter-spacing:1px}
     nav{display:flex;gap:18px;align-items:center}
     a.navlink{color:var(--muted);text-decoration:none;font-weight:600}
     .cta{padding:8px 14px;border-radius:999px;background:linear-gradient(90deg,#1f6f5f,#6ee7b7);color:#051014;font-weight:700}
@@ -45,7 +45,7 @@
     /* --- Projects horizontal strip --- */
     .projects-section{padding:120px 6vw;}
     .projects-wrap{height:360px;position:relative}
-    .projects-track{display:flex;gap:28px;align-items:stretch;height:100%;will-change:transform}
+    .projects-track{display:flex;flex-wrap:wrap;gap:28px;align-items:stretch;height:auto;will-change:transform}
     .project{min-width:560px;border-radius:14px;background:var(--glass);padding:18px;display:flex;flex-direction:column;justify-content:flex-end;position:relative;overflow:hidden}
     .project .title{font-weight:800;font-size:22px}
     .project .meta{color:var(--muted);margin-top:6px}
@@ -76,11 +76,9 @@
       .projects-wrap{height:280px}
       .grid{grid-template-columns:repeat(1,1fr)}
     }
-  @keyframes float{0%{transform:translateY(0)}50%{transform:translateY(14px)}100%{transform:translateY(0)}}
-    .hero-left h1{animation:float 5s ease-in-out infinite;font-weight:900;letter-spacing:-2px;}
-    .stretch{display:inline-block;animation:stretch 6s var(--ease) infinite;transform-origin:left center;}
-  @keyframes stretch{0%{letter-spacing:-2px;transform:scaleX(1);}40%{letter-spacing:-6px;transform:scaleX(1.3);}70%{letter-spacing:-2px;transform:scaleX(1);}100%{letter-spacing:-2px;transform:scaleX(1);}}
-</style>
+  @keyframes floatRev{0%{transform:translateY(0)}50%{transform:translateY(-14px)}100%{transform:translateY(0)}}
+    .hero-left h1{animation:floatRev 5s ease-in-out infinite;font-weight:900;letter-spacing:-2px;}
+  </style>
 </head>
 <body>
 
@@ -99,7 +97,7 @@
   <section class="hero">
     <div class="hero-left">
       <div class="eyebrow">FRONTEND DESIGNER</div>
-      <h1 class="reveal stretch">-ALOMGIR HOSSEN</h1>
+      <h1 class="reveal">-ALOMGIR HOSSEN</h1>
       <h2 class="reveal">Crafting Pixel-Perfect Coding Experiences.</h2>
       <p class="lead reveal">Hi, I'm Alomgir. I specialize in React.js, Next.js and creating seamless, responsive web solutions that blend code with creativity. I build animated interfaces and delightful micro-interactions.</p>
       <div class="hero-cta reveal">
@@ -108,7 +106,18 @@
     </div>
     <div class="hero-right">
       <div class="layer gloss"></div>
-      <div class="mock-canvas">Hero visual — replace with animated canvas / three.js scene</div>
+      <div class="mock-canvas">Hero visual — replace with animated canvas / three.js scene        </div>
+        <div class="project reveal">
+          <div class="thumb" style="background-image:url('https://picsum.photos/id/1074/1200/800')"></div>
+          <div class="title">Aurora Lab</div>
+          <div class="meta">Web • Motion</div>
+        </div>
+        <div class="project reveal">
+          <div class="thumb" style="background-image:url('https://picsum.photos/id/1084/1200/800')"></div>
+          <div class="title">Orbit Studio</div>
+          <div class="meta">3D • Creative</div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -136,15 +145,6 @@
           <div class="thumb" style="background-image:url('https://picsum.photos/id/1037/1200/800')"></div>
           <div class="title">Gleam & Grace</div>
           <div class="meta">Product • Motion</div>
-                <div class="project reveal">
-          <div class="thumb" style="background-image:url('https://picsum.photos/id/1050/1200/800')"></div>
-          <div class="title">Skyline Vision</div>
-          <div class="meta">Creative • Motion</div>
-        </div>
-        <div class="project reveal">
-          <div class="thumb" style="background-image:url('https://picsum.photos/id/1060/1200/800')"></div>
-          <div class="title">Nova Studio</div>
-          <div class="meta">Interactive • UI/UX</div>
         </div>
       </div>
     </div>
